After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 142212 - In a line or area graph, gnumeric use '0' if Y value is missing
In a line or area graph, gnumeric use '0' if Y value is missing
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: Charting
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2004-05-09 19:16 UTC by Frederic Parrenin
Modified: 2005-02-09 20:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot of xl (8.77 KB, image/png)
2004-05-11 16:48 UTC, Jody Goldberg
Details
test workbook (22.00 KB, application/xls)
2004-05-11 16:49 UTC, Jody Goldberg
Details

Description Frederic Parrenin 2004-05-09 19:16:29 UTC
This is the same bug than bug 126056 but for line or area plot.
Gnumeric use 0 when the Y value is missing, but it should either use a
discontinued line, or interpolate between the two closest values (In fact we can
choose between these two options in XL).
Comment 1 Jody Goldberg 2004-05-11 16:47:43 UTC
I've known about this one for a while.
Comment 2 Jody Goldberg 2004-05-11 16:48:54 UTC
Created attachment 27614 [details]
screenshot of xl

screen shot of what XL does for each of the line/area normal/stacked/percentage
cases
Comment 3 Jody Goldberg 2004-05-11 16:49:38 UTC
Created attachment 27615 [details]
test workbook
Comment 4 Emmanuel Pacaud 2004-05-20 22:55:26 UTC
Fixed in CVS (will be in 1.2.13 and 1.3.1). 

Currently, there's no choice, gnumeric draws discontinued lines. So I'm not sure
wether to close this bug or not...