http://bugzilla.gnome.org/show_bug.cgi?id=142212 don't use '0' if Y value

2004-05-20  Emmanuel Pacaud <emmanuel.pacaud@univ-poitiers.fr>
	http://bugzilla.gnome.org/show_bug.cgi?id=142212
	* graph/plugins/plot-barcol/gog-line.c (gog_line_view_render) :don't
	use '0' if Y value is missing.